# LameAndroid

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/net/qiujuer/lame/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/net/qiujuer/lame/sample/: MainActivity.java
app/src/main/java/net/qiujuer/lame/sample/helper/: AudioPlayHelper.java  AudioRecordHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/net/qiujuer/lame/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lame/: CMakeLists.txt  build.gradle  gradle.properties
lame/src/androidTest/java/net/qiujuer/lame/: ExampleInstrumentedTest.java
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: net_qiujuer_lame_Lame.cpp  net_qiujuer_lame_Lame.h
lame/src/main/cpp/libmp3lame/: id3tag.c  lame.c  machine.h  psymodel.c  util.c
lame/src/main/java/net/qiujuer/lame/: Lame.java  LameAsyncEncoder.java  LameOutputStream.java
lame/src/test/java/net/qiujuer/lame/: ExampleUnitTest.java
